# psifio

psifio/: Cargo.toml
psifio-cli/: Cargo.toml
psifio-cli/src/: main.rs
psifio-gui/: Cargo.toml
psifio-gui/src/: main.rs
psifio/src/: card.rs  hand.rs  lib.rs  player.rs  table.rs  table_rules.rs
psifio/src/simulation/: mod.rs  round.rs  shoe.rs  simulated_player.rs  simulation.rs
psifio/src/simulation/hand_logic/: card.rs  dealer_hand.rs  hand.rs  hand_actions.rs  hand_total.rs  mod.rs  player_hand.rs
psifio/src/simulation/stats/: blackjack_stats.rs  hand_outcome_stats.rs  hand_stats.rs  hand_stats_table.rs  mod.rs  simulation_stats.rs
psifio/src/simulation/strategies/: mod.rs  player_strategy.rs
psifio/tests/: hand.rs  hello_test.rs  simulation.rs
