[package]
name = "psifio-gui"
authors = ["Mihail Kovachev"]
description = "GUI tool for blackjack simulations"
repository = "https://github.com/MihailKovachev/psifio"
homepage = "https://github.com/MihailKovachev/psifio/tree/main/psifio-cli"
keywords = ["blackjack", "simulation"]
readme = "README.md"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
psifio = { path = "../psifio", version = "0.1.0" }